# firstWeekEsport

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 4b03e79e41a0_initial.py
app/: __init__.py  main.py
app/api/: team.py
app/controllers/: auth_controller.py  match.py  player.py  team.py  tournament.py
app/core/: config.py  database.py  security.py
app/dependencies/: auth.py  database.py
app/exceptions/: __init__.py
app/models/: __init__.py  match.py  player.py  team.py  tournament.py  user.py
app/repositories/: base.py  match_repository.py  player_repository.py  team_repository.py  tournament_repository.py  user_repository.py
app/schemas/: auth.py  match.py  pagination.py  player.py  team.py  tournament.py  user.py
app/services/: auth_service.py  match_service.py  player_service.py  team_service.py  tournament_service.py  user_service.py
tests/: conftest.py
tests/services/: test_match_service.py  test_player_service.py  test_team_service.py  test_tournament_service.py
