[project]
name = "esporttournamentapi"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.1.0",
    "fastapi>=0.139.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
    "pytest>=9.1.1",
]
